# pyst

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  cache_manager.py  config.py  data_manager.py  database.py  dev-start.ps1  dev-start.sh  docker-compose.yml  init.py  logger_config.py  monitor.py  pyproject.toml  test.py  trade_calendar.py
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/components/: Changelog.vue  EditModal.vue  InfoBox.vue  StockTable.vue  TPlusCard.vue  ThemeToggle.vue  Watermark.vue
frontend/app/composables/: useApi.ts  useTheme.ts
frontend/app/pages/: index.vue  info.vue
frontend/app/plugins/: arco.ts  pinia.ts
frontend/app/stores/: stock.ts
frontend/app/styles/: QUICK_REFERENCE.md  README.md  _mixins.scss  _variables.scss  main.scss
frontend/app/utils/: tplusCalculation.ts
react-frontend/: QUICK_START.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
react-frontend/src/: App.tsx  main.tsx
react-frontend/src/components/: Changelog.scss  Changelog.tsx  EditModal.scss  EditModal.tsx  InfoBox.scss  InfoBox.tsx  StockTable.scss  StockTable.tsx  TPlusCard.scss  TPlusCard.tsx  ThemeToggle.scss  ThemeToggle.tsx  Watermark.scss  Watermark.tsx
react-frontend/src/hooks/: useTheme.ts
react-frontend/src/pages/: Home.scss  Home.tsx  Info.scss  Info.tsx
react-frontend/src/stores/: stockStore.ts
react-frontend/src/styles/: _mixins.scss  main.scss  (+1 more)
static/: stock_deviation.js
templates/: base.html  error.html  index.html
(+6 files in other folders)
